Implement 3 streams design for Attach
Redesigned docker attach to use 3 separate stdio streams from the portlayer.
Streams are now exposed via Swagger.  Multi-stream multiplexing for docker
CLI is still performed in the Docker personality.
